test/data/semantic/bad/type_not_printable.coy
fn main() -> () {
    print!("{} {}\n", 1.0, 0.0, 0.0)
}
